# RAGitect

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  app.py  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: frontend.yml  test.yml
alembic/: env.py
alembic/versions/: 38b2df5424bf_create_llm_provider_configs.py  6a3bc9ddb157_remove_redundant_unique_constraint_on_.py  7791001eb8a2_add_fts_gin_index.py  8dceb919041e_create_embedding_configs.py  929b0daef26b_add_openai_compatible_provider.py  95ef8efd9fa3_add_gemini_provider.py  ae1dfed0ea4f_add_vector_indexes.py  b95b9c3ddf9b_initial_schema.py
db_init/: init-db.sh
frontend/: Dockerfile  README.md  package-lock.json  package.json  vitest.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AssistantMessage.tsx  ChatPanel.tsx  ChatProviderSelector.tsx  CreateWorkspaceModal.tsx  DeleteDocumentDialog.tsx  DeleteWorkspaceDialog.tsx  DocumentList.tsx  DocumentSidebar.tsx  DocumentViewer.tsx  IngestionDropzone.tsx  MessageActions.tsx  MessageWithCitations.tsx  UploadModal.tsx  UploadProgress.tsx  WorkspaceCard.tsx
frontend/src/contexts/: ProviderSelectionContext.tsx
frontend/src/hooks/: useChat.ts  useCopyToClipboard.ts  useLocalStorage.ts  useProviderSelection.ts  useWorkspaces.ts
frontend/src/lib/: api.ts  chat.ts  citations.ts  documents.ts  llmConfig.ts  providers.ts  types.ts
frontend/src/test/: setup.ts  sse-protocol-validation.test.ts
frontend/src/types/: citation.ts
frontend/tests/e2e/: url-upload.spec.ts  workspaces.spec.ts
ragitect/: document_processor.py  engine.py  llm.py
ragitect/agents/rag/: __init__.py  graph.py  nodes.py  schemas.py  state.py  streaming.py  tools.py
ragitect/api/: __init__.py
ragitect/api/schemas/: __init__.py  chat.py  document.py  document_input.py  llm_config.py  workspace.py
ragitect/api/v1/: chat.py  documents.py  llm_configs.py  router.py  workspaces.py
ragitect/prompts/: __init__.py  query_prompts.py  rag_prompts.py  strategy_prompts.py
ragitect/services/: __init__.py  adaptive_k.py  config.py  document_processing_service.py  document_processor.py  document_upload_service.py  embedding.py  exceptions.py  llm.py  llm_config_service.py  llm_factory.py  mmr.py  query_service.py  reranker.py  retry.py  url_processing_service.py  vector_store.py
ragitect/services/database/: __init__.py  connection.py  exceptions.py  models.py
ragitect/services/processor/: __init__.py  base.py  docling_processor.py  factory.py  pdf_url_processor.py  simple.py  web_url_processor.py  youtube_processor.py
ragitect/services/validators/: __init__.py  url_validator.py
ragitect/utils/: encryption.py
src/: embedding.py  vector_store.py
tests/: README.md  conftest.py  test_docker_setup.py  test_engine.py
tests/agents/: __init__.py
tests/agents/rag/: test_graph.py  test_nodes.py  test_schemas.py  test_state.py  test_streaming.py  test_tools.py
tests/api/: conftest.py
tests/prompts/: __init__.py  test_query_prompts.py  test_rag_prompts.py
tests/services/: test_adaptive_k.py  test_config.py  test_document_processing_service.py  test_document_processor.py  test_embedding_batching.py  test_iterative_fallback.py  test_llm.py  test_llm_config_service.py  test_llm_judge.py  test_markdown_chunking.py  test_mmr.py  test_query_baseline.py  test_query_corpus_validation.py  test_query_real_llm.py  test_query_router.py  test_query_service.py  test_reranker.py  test_retry.py  test_url_processing_service.py  test_vector_store.py
tests/unit/: test_document_upload_service.py  test_embedding_generation.py  test_llm_config_service.py
tests/utils/: test_encryption.py
(+75 files in other folders)
