[project]
name = "ragitect"
version = "0.1.0"
description = "Ragitect"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "chainlit>=2.9.0",
    "docling>=2.61.2",
    "langchain-community>=0.3.17",
    "langchain-litellm>=0.3.0",
    "litellm>=1.79.3",
    "pypdf>=6.2.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.51.0",
]

[dependency-groups]
dev = [
    "faiss-cpu>=1.12.0",
    "langchain-ollama>=0.3.10",
    "openai>=2.7.2",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=ragitect",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "integration: marks tests as integration tests (require DATABASE_URL set)",
]
