[project]
name = "ragitect"
version = "0.1.0"
description = "Ragitect"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.30.0",
    "cryptography>=46.0.3",
    "docling>=2.61.2",
    "fastapi>=0.121.2",
    "httpx>=0.28.1",
    "langchain-community>=0.3.17",
    "langchain-google-vertexai>=3.2.0",
    "langchain-litellm>=0.3.0",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=0.3.35",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=1.0.5",
    "litellm>=1.79.3",
    "pgvector>=0.4.1",
    "psycopg2-binary>=2.9.11",
    "pypdf>=6.2.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "sentence-transformers>=5.2.0",
    "sqlalchemy>=2.0.44",
    "tiktoken>=0.12.0",
    "transformers>=4.57.1",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "faiss-cpu>=1.12.0",
    "httpx>=0.28.1",
    "openai>=2.7.2",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pyyaml>=6.0.3",
    "ruff>=0.14.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=ragitect",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "integration: marks tests as integration tests (require DATABASE_URL set)",
]
